--- a/portfolio.html
+++ b/portfolio.html
@@ -13,163 +13,181 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
   </head>
-  <body class="body">
+  <body class="body container">
     <!--Header section-->
-    <header class="header">
-      <nav>
-        <a class="header-logo link" href="./index.html"
-          >Web<span class="accent">Studio</span></a
+    <div class="page-container">
+      <header class="header">
+        <nav>
+          <a class="header-logo link" href="./index.html"
+            >Web<span class="accent">Studio</span></a
+          >
+          <ul class="list">
+            <li>
+              <a class="header-link link" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="list">
+            <li class="address-item">
+              <a class="contacts-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a class="contacts-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </header>
+      <!--Main block-->
+      <main>
+        <!--Hero section-->
+        <section>
+          <div>
+            <h1 hidden>Effective Solutions for Your Business</h1>
+            <ul class="list">
+              <li>
+                <button class="main-button" type="button">All</button>
+              </li>
+              <li>
+                <button class="main-button" type="button">Web Site</button>
+              </li>
+              <li>
+                <button class="main-button" type="button">App</button>
+              </li>
+              <li>
+                <button class="main-button" type="button">Design</button>
+              </li>
+              <li>
+                <button class="main-button" type="button">Marketing</button>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <ul class="list card-set">
+              <li class="card-set-item">
+                <a class="link"
+                  ><img
+                    src="./images/imga.jpg"
+                    alt="bank-app-img"
+                    width="360"
+                  />
+                  <h2 class="row-title">Banking App Interface Concept</h2>
+                  <p class="row-text">App</p>
+                </a>
+              </li>
+              <li class="card-set-item">
+                <a class="link"
+                  ><img src="./images/imgb.jpg" alt="qr-code-img" width="360" />
+                  <h2 class="row-title">Cashless Payment</h2>
+                  <p class="row-text">Marketing</p>
+                </a>
+              </li>
+              <li class="card-set-item">
+                <a class="link"
+                  ><img
+                    src="./images/imgc.jpg"
+                    alt="life-in-the-future-img"
+                    width="360"
+                  />
+                  <h2 class="row-title">Meditation App</h2>
+                  <p class="row-text">App</p>
+                </a>
+              </li>
+              <li class="card-set-item">
+                <a class="link"
+                  ><img
+                    src="./images/imgd.jpg"
+                    alt="navigation-img"
+                    width="360"
+                  />
+                  <h2 class="row-title">Taxi Service</h2>
+                  <p class="row-text">Marketing</p>
+                </a>
+              </li>
+              <li class="card-set-item">
+                <a class="link"
+                  ><img
+                    src="./images/imgi.jpg"
+                    alt="wallpaper-theme-img"
+                    width="360"
+                  />
+                  <h2 class="row-title">Screen Illustrations</h2>
+                  <p class="row-text">Design</p>
+                </a>
+              </li>
+              <li class="card-set-item">
+                <a class="link"
+                  ><img
+                    src="./images/imgf.jpg"
+                    alt="girl-airpods-img"
+                    width="360"
+                  />
+                  <h2 class="row-title">Online Courses</h2>
+                  <p class="row-text">Marketing</p>
+                </a>
+              </li>
+              <li class="card-set-item">
+                <a class="link"
+                  ><img
+                    src="./images/imgg.jpg"
+                    alt="make-everything-feel-easier-img"
+                    width="360"
+                  />
+                  <h2 class="row-title">Instagram Stories Concept</h2>
+                  <p class="row-text">Design</p>
+                </a>
+              </li>
+              <li class="card-set-item">
+                <a class="link"
+                  ><img
+                    src="./images/imgk.jpg"
+                    alt="healthy-food-img"
+                    width="360"
+                  />
+                  <h2 class="row-title">Organic Food</h2>
+                  <p class="row-text">Web Site</p>
+                </a>
+              </li>
+              <li class="card-set-item">
+                <a class="link"
+                  ><img
+                    src="./images/imgl.jpg"
+                    alt="barista-milk-img"
+                    width="360"
+                  />
+                  <h2 class="row-title">Fresh Coffee</h2>
+                  <p class="row-text">Web Site</p>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </main>
+      <!--Footer section-->
+      <footer class="footer">
+        <a class="footer-logo link" href="./index.html"
+          >Web<span class="footer-accent">Studio</span></a
         >
-        <ul class="list">
-          <li>
-            <a class="header-link link" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li>
-            <a class="header-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="list">
-          <li class="address-item">
-            <a class="contacts-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item">
-            <a class="contacts-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-    </header>
-    <!--Main block-->
-    <main>
-      <!--Hero section-->
-      <section>
-        <h1 hidden>Effective Solutions for Your Business</h1>
-        <ul class="list">
-          <li>
-            <button class="main-button" type="button">All</button>
-          </li>
-          <li>
-            <button class="main-button" type="button">Web Site</button>
-          </li>
-          <li>
-            <button class="main-button" type="button">App</button>
-          </li>
-          <li>
-            <button class="main-button" type="button">Design</button>
-          </li>
-          <li>
-            <button class="main-button" type="button">Marketing</button>
-          </li>
-        </ul>
-        <ul class="list">
-          <li>
-            <a class="link"
-              ><img src="./images/imga.jpg" alt="bank-app-img" width="360" />
-              <h2 class="row-title">Banking App Interface Concept</h2>
-              <p class="row-text">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="link"
-              ><img src="./images/imgb.jpg" alt="qr-code-img" width="360" />
-              <h2 class="row-title">Cashless Payment</h2>
-              <p class="row-text">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link"
-              ><img
-                src="./images/imgc.jpg"
-                alt="life-in-the-future-img"
-                width="360"
-              />
-              <h2 class="row-title">Meditation App</h2>
-              <p class="row-text">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="link"
-              ><img src="./images/imgd.jpg" alt="navigation-img" width="360" />
-              <h2 class="row-title">Taxi Service</h2>
-              <p class="row-text">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link"
-              ><img
-                src="./images/imgi.jpg"
-                alt="wallpaper-theme-img"
-                width="360"
-              />
-              <h2 class="row-title">Screen Illustrations</h2>
-              <p class="row-text">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="link"
-              ><img
-                src="./images/imgf.jpg"
-                alt="girl-airpods-img"
-                width="360"
-              />
-              <h2 class="row-title">Online Courses</h2>
-              <p class="row-text">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link"
-              ><img
-                src="./images/imgg.jpg"
-                alt="make-everything-feel-easier-img"
-                width="360"
-              />
-              <h2 class="row-title">Instagram Stories Concept</h2>
-              <p class="row-text">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="link"
-              ><img
-                src="./images/imgk.jpg"
-                alt="healthy-food-img"
-                width="360"
-              />
-              <h2 class="row-title">Organic Food</h2>
-              <p class="row-text">Web Site</p>
-            </a>
-          </li>
-          <li>
-            <a class="link"
-              ><img
-                src="./images/imgl.jpg"
-                alt="barista-milk-img"
-                width="360"
-              />
-              <h2 class="row-title">Fresh Coffee</h2>
-              <p class="row-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <!--Footer section-->
-    <footer class="footer">
-      <a class="footer-logo link" href="./index.html"
-        >Web<span class="footer-accent">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
