--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Effective Solutions for Your Business" />
     <title>WebStudio</title>
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,152 +17,170 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
-    />
   </head>
-  <body class="body container">
+  <body>
     <!--Header section-->
     <div class="page-container">
       <header class="header">
-        <nav>
-          <a class="header-logo link" href="./index.html"
-            >Web<span class="accent">Studio</span></a
-          >
-          <ul class="list">
-            <li>
-              <a class="header-link link" href="./index.html">Studio</a>
-            </li>
-            <li>
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
-            </li>
-            <li>
-              <a class="header-link link" href="">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="address">
-          <ul class="list">
-            <li class="address-item">
-              <a class="contacts-link link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="address-item">
-              <a class="contacts-link link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <div class="header-container container">
+          <nav class="header-navigation">
+            <a class="header-logo link" href="./index.html"
+              >Web<span class="accent">Studio</span></a
+            >
+            <ul class="list">
+              <li class="header-item">
+                <a class="header-link link" href="./index.html">Studio</a>
+              </li>
+              <li class="header-item">
+                <a class="header-link link" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="header-item">
+                <a class="header-link link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="address">
+            <ul class="list">
+              <li class="address-item">
+                <a class="contacts-link link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a class="contacts-link link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
       </header>
       <!--Main block-->
       <main>
         <!--Hero section-->
         <section class="hero">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-button" type="button">Order Service</button>
+          <div class="container">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button class="hero-button" type="button">Order Service</button>
+          </div>
         </section>
         <!--Benefits section-->
-        <section>
-          <h2>Benefits section</h2>
-          <ul class="list">
-            <li class="benefits-item">
-              <h3 class="benefits-titles">Strategy</h3>
-              <p class="benefits-text">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li class="benefits-item">
-              <h3 class="benefits-titles">Punctuality</h3>
-              <p class="benefits-text">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="benefits-item">
-              <h3 class="benefits-titles">Diligence</h3>
-              <p class="benefits-text">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="benefits-item">
-              <h3 class="benefits-titles">Technologies</h3>
-              <p class="benefits-text">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
+        <section class="benefits-section">
+          <div class="container">
+            <h2>Benefits section</h2>
+            <ul class="benefits-list list">
+              <li class="benefits-item">
+                <h3 class="benefits-titles">Strategy</h3>
+                <p class="benefits-text">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </li>
+              <li class="benefits-item">
+                <h3 class="benefits-titles">Punctuality</h3>
+                <p class="benefits-text">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
+              </li>
+              <li class="benefits-item">
+                <h3 class="benefits-titles">Diligence</h3>
+                <p class="benefits-text">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </li>
+              <li class="benefits-item">
+                <h3 class="benefits-titles">Technologies</h3>
+                <p class="benefits-text">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
+              </li>
+            </ul>
+          </div>
         </section>
         <!--Services section-->
-        <section>
-          <h2 class="services-title">What are we doing</h2>
-          <ul class="list">
-            <li class="services-item">
-              <a class="servis-link link"
-                ><img src="./images/imgaa.jpg" alt="computer" width="360" />
-              </a>
-            </li>
-            <li class="services-item">
-              <a class="servis-link link"
-                ><img
-                  src="./images/imgbb.jpg"
-                  alt="communicationinwhatsup"
-                  width="360"
-                />
-              </a>
-            </li>
-            <li class="services-item">
-              <a class="servis-link link"
-                ><img
-                  src="./images/imgcc.jpg"
-                  alt="makbookandiphone"
-                  width="360"
-                />
-              </a>
-            </li>
-          </ul>
+        <section class="services-section">
+          <div class="container">
+            <h2 class="services-title">What are we doing</h2>
+            <ul class="benefits-list list">
+              <li class="services-item">
+                <a class="servis-link link"
+                  ><img src="./images/imgaa.jpg" alt="computer" width="360" />
+                </a>
+              </li>
+              <li class="services-item">
+                <a class="servis-link link"
+                  ><img
+                    src="./images/imgbb.jpg"
+                    alt="communicationinwhatsup"
+                    width="360"
+                  />
+                </a>
+              </li>
+              <li class="services-item">
+                <a class="servis-link link"
+                  ><img
+                    src="./images/imgcc.jpg"
+                    alt="makbookandiphone"
+                    width="360"
+                  />
+                </a>
+              </li>
+            </ul>
+          </div>
         </section>
         <!--Team section-->
         <section class="team">
-          <h2 class="team-title">Our Team</h2>
-          <ul class="list">
-            <li class="team-item">
-              <img src="./images/imgdd.jpg" alt="markguerrero" width="264" />
-              <h3 class="team-titles">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
-            </li>
-            <li class="team-item">
-              <img src="./images/imgqq.jpg" alt="tomford" width="264" />
-              <h3 class="team-titles">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
-            </li>
-            <li class="team-item">
-              <img src="./images/imgpp.jpg" alt="camilagarcia" width="264" />
-              <h3 class="team-titles">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
-            </li>
-            <li class="team-item">
-              <img src="./images/imgll.jpg" alt="danielwilson" width="264" />
-              <h3 class="team-titles">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="benefits-list list">
+              <li class="team-item">
+                <img src="./images/imgdd.jpg" alt="markguerrero" width="264" />
+                <div class="team-container">
+                  <h3 class="team-titles">Mark Guerrero</h3>
+                  <p class="team-text">Product Designer</p>
+                </div>
+              </li>
+              <li class="team-item">
+                <img src="./images/imgqq.jpg" alt="tomford" width="264" />
+                <div>
+                  <h3 class="team-titles">Tom Ford</h3>
+                  <p class="team-text">Frontend Developer</p>
+                </div>
+              </li>
+              <li class="team-item">
+                <img src="./images/imgpp.jpg" alt="camilagarcia" width="264" />
+                <div>
+                  <h3 class="team-titles">Camila Garcia</h3>
+                  <p class="team-text">Marketing</p>
+                </div>
+              </li>
+              <li class="team-item">
+                <img src="./images/imgll.jpg" alt="danielwilson" width="264" />
+                <div>
+                  <h3 class="team-titles">Daniel Wilson</h3>
+                  <p class="team-text">UI Designer</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </section>
       </main>
       <!--Footer section-->
       <footer class="footer">
-        <a class="footer-logo link" href="./index.html"
-          >Web<span class="footer-accent">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="container">
+          <a class="footer-logo link" href="./index.html"
+            >Web<span class="footer-accent">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </footer>
     </div>
   </body>
