--- a/portfolio.html
+++ b/portfolio.html
@@ -6,40 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Effective Solutions for Your Business" />
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
       href="node_modules/modern-normalize/modern-normalize.css"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="body container">
+  <body>
     <!--Header section-->
-    <div class="page-container">
+    <div class="header-container container">
       <header class="header">
-        <nav>
+        <nav class="header-navigation">
           <a class="header-logo link" href="./index.html"
             >Web<span class="accent">Studio</span></a
           >
-          <ul class="list">
-            <li>
+          <ul class="header-list list">
+            <li class="header-item">
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
-            <li>
+            <li class="header-item">
               <a class="header-link link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li>
+            <li class="header-item">
               <a class="header-link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="address">
-          <ul class="list">
+          <ul class="header-list list">
             <li class="address-item">
               <a class="contacts-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -56,10 +56,10 @@
       <!--Main block-->
       <main>
         <!--Hero section-->
-        <section>
-          <div>
-            <h1 hidden>Effective Solutions for Your Business</h1>
-            <ul class="list">
+        <section class="section">
+          <div class="container">
+            <h1 .visually-hidden>Effective Solutions for Your Business</h1>
+            <ul class="hero-list list">
               <li>
                 <button class="main-button" type="button">All</button>
               </li>
@@ -76,9 +76,7 @@
                 <button class="main-button" type="button">Marketing</button>
               </li>
             </ul>
-          </div>
-          <div>
-            <ul class="list card-set">
+            <ul class="card-set list">
               <li class="card-set-item">
                 <a class="link"
                   ><img
@@ -86,15 +84,19 @@
                     alt="bank-app-img"
                     width="360"
                   />
-                  <h2 class="row-title">Banking App Interface Concept</h2>
-                  <p class="row-text">App</p>
+                  <div class="portfolio-conteiner">
+                    <h2 class="row-title">Banking App Interface Concept</h2>
+                    <p class="row-text">App</p>
+                  </div>
                 </a>
               </li>
               <li class="card-set-item">
                 <a class="link"
                   ><img src="./images/imgb.jpg" alt="qr-code-img" width="360" />
-                  <h2 class="row-title">Cashless Payment</h2>
-                  <p class="row-text">Marketing</p>
+                  <div class="portfolio-conteiner">
+                    <h2 class="row-title">Cashless Payment</h2>
+                    <p class="row-text">Marketing</p>
+                  </div>
                 </a>
               </li>
               <li class="card-set-item">
@@ -104,8 +106,10 @@
                     alt="life-in-the-future-img"
                     width="360"
                   />
-                  <h2 class="row-title">Meditation App</h2>
-                  <p class="row-text">App</p>
+                  <div class="portfolio-conteiner">
+                    <h2 class="row-title">Meditation App</h2>
+                    <p class="row-text">App</p>
+                  </div>
                 </a>
               </li>
               <li class="card-set-item">
@@ -115,8 +119,10 @@
                     alt="navigation-img"
                     width="360"
                   />
-                  <h2 class="row-title">Taxi Service</h2>
-                  <p class="row-text">Marketing</p>
+                  <div class="portfolio-conteiner">
+                    <h2 class="row-title">Taxi Service</h2>
+                    <p class="row-text">Marketing</p>
+                  </div>
                 </a>
               </li>
               <li class="card-set-item">
@@ -126,8 +132,10 @@
                     alt="wallpaper-theme-img"
                     width="360"
                   />
-                  <h2 class="row-title">Screen Illustrations</h2>
-                  <p class="row-text">Design</p>
+                  <div class="portfolio-conteiner">
+                    <h2 class="row-title">Screen Illustrations</h2>
+                    <p class="row-text">Design</p>
+                  </div>
                 </a>
               </li>
               <li class="card-set-item">
@@ -137,8 +145,10 @@
                     alt="girl-airpods-img"
                     width="360"
                   />
-                  <h2 class="row-title">Online Courses</h2>
-                  <p class="row-text">Marketing</p>
+                  <div class="portfolio-conteiner">
+                    <h2 class="row-title">Online Courses</h2>
+                    <p class="row-text">Marketing</p>
+                  </div>
                 </a>
               </li>
               <li class="card-set-item">
@@ -148,8 +158,10 @@
                     alt="make-everything-feel-easier-img"
                     width="360"
                   />
-                  <h2 class="row-title">Instagram Stories Concept</h2>
-                  <p class="row-text">Design</p>
+                  <div class="portfolio-conteiner">
+                    <h2 class="row-title">Instagram Stories Concept</h2>
+                    <p class="row-text">Design</p>
+                  </div>
                 </a>
               </li>
               <li class="card-set-item">
@@ -159,8 +171,10 @@
                     alt="healthy-food-img"
                     width="360"
                   />
-                  <h2 class="row-title">Organic Food</h2>
-                  <p class="row-text">Web Site</p>
+                  <div class="portfolio-conteiner">
+                    <h2 class="row-title">Organic Food</h2>
+                    <p class="row-text">Web Site</p>
+                  </div>
                 </a>
               </li>
               <li class="card-set-item">
@@ -170,8 +184,10 @@
                     alt="barista-milk-img"
                     width="360"
                   />
-                  <h2 class="row-title">Fresh Coffee</h2>
-                  <p class="row-text">Web Site</p>
+                  <div class="portfolio-conteiner">
+                    <h2 class="row-title">Fresh Coffee</h2>
+                    <p class="row-text">Web Site</p>
+                  </div>
                 </a>
               </li>
             </ul>
