--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Effective Solutions for Your Business" />
     <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="node_modules/modern-normalize/modern-normalize.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
@@ -69,7 +69,7 @@
         <!--Benefits section-->
         <section class="benefits-section">
           <div class="container">
-            <h2 .visually-hidden>Benefits section</h2>
+            <h2 hidden>Benefits section</h2>
             <ul class="benefits-list list">
               <li class="benefits-item">
                 <h3 class="benefits-titles">Strategy</h3>
@@ -147,21 +147,21 @@
               </li>
               <li class="team-item">
                 <img src="./images/imgqq.jpg" alt="tomford" width="264" />
-                <div class="container">
+                <div class="team-container">
                   <h3 class="team-titles">Tom Ford</h3>
                   <p class="team-text">Frontend Developer</p>
                 </div>
               </li>
               <li class="team-item">
                 <img src="./images/imgpp.jpg" alt="camilagarcia" width="264" />
-                <div class="container">
+                <div class="team-container">
                   <h3 class="team-titles">Camila Garcia</h3>
                   <p class="team-text">Marketing</p>
                 </div>
               </li>
               <li class="team-item">
                 <img src="./images/imgll.jpg" alt="danielwilson" width="264" />
-                <div class="container">
+                <div class="team-container">
                   <h3 class="team-titles">Daniel Wilson</h3>
                   <p class="team-text">UI Designer</p>
                 </div>
