--- a/portfolio.html
+++ b/portfolio.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Effective Solutions for Your Business" />
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="node_modules/modern-normalize/modern-normalize.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!--Header section-->
-    <div class="header-container container">
+    <div class="portfolio-header-container container">
       <header class="header">
         <nav class="header-navigation">
           <a class="header-logo link" href="./index.html"
@@ -58,7 +58,7 @@
         <!--Hero section-->
         <section class="section">
           <div class="container">
-            <h1 .visually-hidden>Effective Solutions for Your Business</h1>
+            <h1 hidden>Effective Solutions for Your Business</h1>
             <ul class="hero-list list">
               <li>
                 <button class="main-button" type="button">All</button>
