--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <!--Benefits section-->
         <section class="benefits-section">
           <div class="container">
-            <h2 hidden>Benefits section</h2>
+            <h2 .visually-hidden>Benefits section</h2>
             <ul class="benefits-list list">
               <li class="benefits-item">
                 <h3 class="benefits-titles">Strategy</h3>
