--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     <!--Header section-->
     <div class="portfolio-header-container container">
       <header class="header">
-        <nav class="header-navigation">
+        <nav class="portfolio-header-navigation">
           <a class="header-logo link" href="./index.html"
             >Web<span class="accent">Studio</span></a
           >
@@ -58,7 +58,7 @@
         <!--Hero section-->
         <section class="section">
           <div class="container">
-            <h1 hidden>Effective Solutions for Your Business</h1>
+            <h1 .visually-hidden>Effective Solutions for Your Business</h1>
             <ul class="hero-list list">
               <li>
                 <button class="main-button" type="button">All</button>
