--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,9 @@
         <!--Hero section-->
         <section class="section">
           <div class="container">
-            <h1 hidden>Effective Solutions for Your Business</h1>
+            <h1 class="visually-hidden">
+              Effective Solutions for Your Business
+            </h1>
             <ul class="hero-list list">
               <li>
                 <button class="main-button" type="button">All</button>
